tests/diagnostics_golden/diag_zero_div.txt
Diagnostics Golden: Division by Zero
Source: tests/negative/neg_rule3_zero_div.safe
Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p133:0610d951
Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p134:90a17a3b

Expected diagnostic output:
------------------------------------------------------------------------
neg_rule3_zero_div.safe:14:16: error: divisor not provably nonzero
  |
  | 14 |       return A / B;  -- ERROR: B may be zero
  |    |                  ^
  |
  note: right operand 'B' has type Value (range -100 .. 100),
        which includes zero.
  note: no preceding conditional or subtype constraint establishes
        B /= 0 on all paths reaching this division.
  note: rule: D27 Rule 3 (Division by Provably Nonzero Divisor)
  note: per spec/02-restrictions.md section 2.8.3 paragraph 133:
        "The right operand of the operators /, mod, and rem shall be
        provably nonzero at compile time."
  note: per spec/02-restrictions.md section 2.8.3 paragraph 134:
        "If none of the conditions in paragraph 133 holds, the program
        is nonconforming and a conforming implementation shall reject
        the expression with a diagnostic."
  suggestion: add a guard before the division:
        if B /= 0 then
           return A / B;
        else
           return 0;  -- or handle the zero case
        end if;
  suggestion: or use a positive subtype that excludes zero:
        type Positive_Value is range 1 .. 100;
------------------------------------------------------------------------
